--- a/_config.yml
+++ b/_config.yml
@@ -128,6 +128,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/1__kxxy"
+    - label: "Linkedin"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/wongi-jeong-2b424b25a/"
 
 # Site Footer
 footer:
