--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Wongi Jeong"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "assets/ignow.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "MS / Ph.D student ICL, ECE, SNU"
   location         : "Seoul, South Korea"
   email            : 
