--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,5 +10,5 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
-  - title: "ICL @ ECE, SNU
+  - title: "ICL @ ECE, SNU"
     url: icl.snu.ac.kr/members
