--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,4 +11,4 @@ main:
   # - title: "Sitemap"
   #   url: /sitemap/
   - title: "ICL @ ECE, SNU"
-    url: icl.snu.ac.kr/members
+    url: https://icl.snu.ac.kr/members
