--- a/_config.yml
+++ b/_config.yml
@@ -131,6 +131,10 @@ author:
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/wongi-jeong-2b424b25a/"
+    - label: "Google scholar"
+      icon: "fab fa-fw fa-google-scholar"
+      url: "https://scholar.google.com/citations?user=5SncxXYAAAAJ&hl=ko"
+
 
 # Site Footer
 footer:
