--- a/_config.yml
+++ b/_config.yml
@@ -129,7 +129,7 @@ author:
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/wongi-jeong-2b424b25a/"
     - label: "Google scholar"
-      icon: "fa-brands fa-google-scholar"
+      icon: "fas fa-fw fa-graduation-cap"
       url: "https://scholar.google.com/citations?user=5SncxXYAAAAJ&hl=ko"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
